2009-10-06 Harri Pitkänen <hatapitk@iki.fi>

	* Additions to autocorrect data.
	* Increase version numbers for 2.2.1.

2009-10-04 Lauri Nurmi <lanurmi@iki.fi>

	* Fix autogen.sh to work with non-GNU find and xargs.

2009-10-04 Harri Pitkänen <hatapitk@iki.fi>

	* Do not dereference iterator to map.end(), this does not work with MSVC.

2009-10-03 Harri Pitkänen <hatapitk@iki.fi>

	* Fix warnings and errors found by compiling the code with MSVC.
	* Fix a bug in Dictionary that lead to returning pointers to freed memory
	  from voikko_dict_variant and voikko_dict_description.

2009-09-17 Harri Pitkänen <hatapitk@iki.fi>

	* Reactivate morphology pruning rule that got accidentally
	  disabled when we switched to internal Malaga implementation.

2009-09-16 Harri Pitkänen <hatapitk@iki.fi>

	* Improve grammar error descriptions.
	* Ship autogen.sh in the source package.
	* Add char * based APIs for morphological analysis.
	* Limit the amount of results and length of word
	  in morphological analysis.

2009-09-15 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>

	* Check the return value from getcwd.

2009-09-13 Harri Pitkänen <hatapitk@iki.fi>

	* Return BASEFORM from morphological analysis if possible.
	  Requires debug version of suomi-malaga.
	* Return WORDIDS and WORDBASES from morphological analysis
	  if possible.

2009-09-12 Harri Pitkänen <hatapitk@iki.fi>

	* Improve spelling suggestion by sorting them
	  according to information from morphological analysis.

2009-09-11 Harri Pitkänen <hatapitk@iki.fi>

	* Add directory for Finnish design documentation.

2009-09-10 Harri Pitkänen <hatapitk@iki.fi>

	* Handle left double quotation mark better in grammar
	  checker. It is still flagged as an error.

2009-09-10 Lauri Nurmi <lanurmi@iki.fi>

	* Replace TRUE and FALSE with true and false.

2009-09-09 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement a -> e to spelling suggestions.
	* Add double character replacements.

2009-09-06 Harri Pitkänen <hatapitk@iki.fi>
